2006-09-18  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/dialogs.c, src/callbacks.c:
   Fixed compiler warnings and removed unnecessary signal handler.


2006-09-17  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/templates.h, src/templates.c:
   Move all static strings from templates.h to templates.c.
 * src/sci_cb.c: Fix sign comparison warning.
 * src/utils.c, src/msgwindow.c:
   Improve utils_get_current_time_string().
 * src/ui_utils.c:
   Only reorder recent files menu when recent file loaded correctly.
   Reorder the recent file menu instead of recreating it.


2006-09-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.h, src/ui_utils.c, src/callbacks.c, src/dialogs.c:
   Add ui_frame_new().
   Run set includes build dialogs modally, keeping the same filetype.
   Updated set includes & arguments dialog layout & text.
 * src/build.c: Don't print the g_spawn argv strings in build_run_cmd()
                on the status bar.


2006-09-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c, src/callbacks.c, src/keybindings.c:
   Added menu items for toggle line commentation.
   Changed some mnemonics in the "format" submenu.
 * src/callbacks.c, src/keybindings.c:
   Added keyboard shortcuts for "Convert Selection to lower-case".


2006-09-12  Frank Lanitz  <frank@frank.uvena.de>

 * data/pascal.tags: Adding data for unit x86.


2006-09-11  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/socket.c: Made socket code for detecting running instances
                 working under Windows.
 * src/win32.c, src/ui_utils.c, src/dialogs.c:
   Fixed compile warnings under Windows.
 * src/highlighting.c: Fixed a typo.
 * src/callbacks.c, src/build.c, src/main.c, src/prefs.c,
   src/ui_utils.c: Implemented Run command (from the build menu) under
                   Windows, the other commands will follow somewhen.


2006-09-10  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sci_cb.c, src/keybindings.c, src/callbacks.c: